--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,61 @@
 .weather {
     border: 1px solid #dadde1;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    padding: 35px;
+    border-radius: 4px;
+    background-image: url("./background.jpg");
+    background-size: 100%;
+
+}
+
+.weather form {
+    margin-bottom: 20px;
+}
+
+.weather h1 {
+    display: block;
+    font-size: 25px;
+    font-weight: 200;
+    line-height: 30px;
+}
+
+.weather ul {
+    margin: 0;
+    padding: 0;
+}
+
+.weather li {
+    font-size: 13px;
+    font-weight: 100;
+    line-height: 17px;
+    list-style: none;
+}
+
+.weather img {
+    height: 64px;
+    margin-right: 10px;
+    display: inline-block;
+    width: 64px;
+    vertical-align: top;
+}
+
+.weather .temperature {
+    font-weight: bold;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 60px;
+}
+
+.weather .unit {
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    top: -32px;
+    margin-left: 5px;
+    line-height: 1;
+}
+
+.weather .city {
+    text-align: right;
 }
