--- a/src/Weather.css
+++ b/src/Weather.css
@@ -32,11 +32,10 @@
     list-style: none;
 }
 
-.weather img {
-    height: 64px;
+.weather canvas {
+    margin-top: 5px;
     margin-right: 10px;
     display: inline-block;
-    width: 64px;
     vertical-align: top;
 }
 
