--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,12 @@
 .weather {
     border: 1px solid #dadde1;
     color: #fff;
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 900;
     padding: 35px;
+    padding-bottom: 50px;
     border-radius: 4px;
-    background-image: url("./background.jpg");
+    background-image: url("./23.png");
     background-size: 100%;
 
 }
@@ -15,8 +17,7 @@
 
 .weather h1 {
     display: block;
-    font-size: 25px;
-    font-weight: 200;
+    font-size: 30px;
     line-height: 30px;
 }
 
@@ -26,9 +27,9 @@
 }
 
 .weather li {
-    font-size: 13px;
-    font-weight: 100;
-    line-height: 17px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
     list-style: none;
 }
 
