--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,9 +1,12 @@
 .WeatherForecast {
     text-align: center;
-    font-weight: 500;
 }
 
 .ForecastTempMin {
-    opacity: 0.6;
+    opacity: 0.7;
     margin-left: 5px;
+}
+
+.WeatherForecastDate {
+    font-size: 12px;
 }
